--- a/posts.html
+++ b/posts.html
@@ -300,7 +300,7 @@
                     {
                         console.log(userVoteCount)
                         const postWeight = singlePost.weight;
-                        const userVoted = userVoteCount.votes;
+                        const userVoted = userVoteCount.votes.length;
                         console.log("Length", userVoted)
                         let pointsReq = "";
                         if (singlePost.votingMechanism == 1) pointsReq = postWeight;
